--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 __pycache__
 frames
 videos/background.mp4
-videos/test.mp4
-videos/woman.mp4
 videos/green.mp4
-.DS_Store
-output.mp4
+out.mp4
 .DS_Store
